force-app/main/default/force-app/main/default/objects/ARMT_Snapshot__c/ARMT_Snapshot__c.object-meta.xml
<CustomObject>
    <label>ARMT Snapshot</label>
    <pluralLabel>ARMT Snapshots</pluralLabel>
    <nameField>
        <label>Name</label>
        <displayFormat>SS-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Stores migration snapshot data for rollback and pre-migration state recovery.</description>
</CustomObject>