force-app/main/default/force-app/main/default/objects/ARMT_Snapshot__c/fields/Snapshot_Time__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Time__c</fullName>
    <label>Snapshot Time</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>