force-app/main/default/force-app/main/default/objects/ARMT_Snapshot__c/fields/SnapshotData__c.field-meta.xml
<CustomField>
    <fullName>SnapshotData__c</fullName>
    <label>Snapshot Data</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Long text field containing serialized snapshot data.</description>
</CustomField>